[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "havsfunc"
version = "33"
description = "Holy's ported AviSynth functions for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "HolyWu", email = "holywu@gmail.com" },
]
keywords = [
  "havsfunc",
  "VapourSynth",
]
classifiers = [
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "VapourSynth>=66",
  "vsrgtools",
  "vstools",
]

[project.urls]
Homepage = "https://github.com/HomeOfVapourSynthEvolution/havsfunc"
Issues = "https://github.com/HomeOfVapourSynthEvolution/havsfunc/issues"
