[metadata]
name = havsfunc
version = 34
author = HolyWu
description = Holy's ported AviSynth functions for VapourSynth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HomeOfVapourSynthEvolution/havsfunc
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Video

[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    VapourSynth>=57
    vsutil
py_modules = havsfunc
